--- a/C++/examples/CMakeLists.txt
+++ b/C++/examples/CMakeLists.txt
@@ -6,6 +6,14 @@ target_compile_definitions(SE-Sync PRIVATE GPERFTOOLS)
 target_link_libraries(SE-Sync profiler)
 endif()
 
+add_executable( SE-Sync-once opt_once.cpp )
+target_link_libraries(SE-Sync-once SESync)
+if(${ENABLE_PROFILING})
+target_compile_definitions(SE-Sync PRIVATE GPERFTOOLS)
+target_link_libraries(SE-Sync-once profiler)
+endif()
+
+
 
 message(STATUS "Building main SE-Sync command-line executable in directory ${EXECUTABLE_OUTPUT_PATH}\n")
 
